--- a/console-customisations/console-notification.welcome-banner.yaml
+++ b/console-customisations/console-notification.welcome-banner.yaml
@@ -9,4 +9,4 @@ spec:
     href: https://www.redhat.com/en/summit
     text: (Event Information)
   location: BannerTop
-  text: Fáilte chuig Red Hat Labs!
+  text: Fáilte chuig Red Hat Labs 2023!
